tests/good/lexical/20-string-2.clap
val s = "How cool is that string? \t \n \b \r \\ \""

