tests/bad/lexical/20-string-2.clap
val s = "How bad is that string? \u \n \b \r \\ \""

